--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 kotlin.code.style=official
 group=com.nekkan
-version=1.0-SNAPSHOT
+version=1.0.0
 maven_group=com.nekkan
 archives_base_name=old-animations
