feat: Setup Mod Menu and ClothConfig

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,5 @@
+cloth_config_version=4.11.19
+mod_menu_version=1.16.9
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
