build: Downgrade Gradle to 6.5.1

--- a/gradle.properties
+++ b/gradle.properties
@@ -13,4 +13,4 @@ maven_group=gq.nkkx
 archives_base_name=old-animations
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
-fabric_version=0.25.1+build.416-1.16
+fabric_version=0.33.0+1.16
