--- a/build.gradle
+++ b/build.gradle
@@ -20,9 +20,7 @@ repositories {
 }
 
 dependencies {
-    modImplementation("com.terraformersmc:modmenu:${project.mod_menu_version}") {
-        exclude(group: "net.fabricmc.fabric-api")
-    }
+    modImplementation "com.terraformersmc:modmenu:${project.mod_menu_version}"
 
     modApi("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}") {
         exclude(group: "net.fabricmc.fabric-api")
