change: Change version to 2.1.0

--- a/gradle.properties
+++ b/gradle.properties
@@ -8,9 +8,9 @@ minecraft_version=1.16.5
 yarn_mappings=1.16.5+build.8
 loader_version=0.11.3
 # Mod Properties
-mod_version=2.0.1
+mod_version=2.1.0
 maven_group=gq.nkkx
-archives_base_name=old-animations
+archives_base_name=old-animations-1.16.x
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
 fabric_version=0.33.0+1.16
